4th Commit - Still no interaction, only register button for navigating to register page - Redundant labels, hardcoded str, etc - Still Working on register act

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <!-- Strings used for fragments for navigation -->
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="hintUsernameTF">Username</string>
-    <string name="hintPasswordTF">Password</string>
+    <string name="hintUsernameTF">Nama</string>
+    <string name="hintPasswordTF">Kata Sandi</string>
+    <string name="hintKelasTF">Kelas</string>
+    <string name="hintNomorSiswaTF">Nomor Siswa</string>
 </resources>
