--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,18 @@
     <!-- Strings used for fragments for navigation -->
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+
+    <string name="hintEmailTF">Email</string>
     <string name="hintUsernameTF">Nama</string>
     <string name="hintPasswordTF">Kata Sandi</string>
     <string name="hintKelasTF">Kelas</string>
     <string name="hintNomorSiswaTF">Nomor Siswa</string>
+
+    <string name="LoginGagal">Gagal masuk, silakan ulangi lagi</string>
+    <string name="LoginBerhasil">Login Berhasil</string>
+    <string name="RegistrasiGagal">User sudah terdaftar, silakan ulangi lagi</string>
+    <string name="RegistrasiBerhasil">Registrasi Berhasil</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
